# backend_ai_credit_check

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: b59fe04b176b_create_checks_and_documents_tables.py  bc7bfbc05729_add_foreign_key_to_documents_table.py
src/app/: main.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: checks.py  health.py
src/app/common/: enums.py
src/app/core/: config.py
src/app/domain/checks/: constants.py  models.py  repository.py  schemas.py  service.py
src/app/domain/documents/: detector.py  parser.py  patterns.py
src/app/infrastructure/: database.py
tests/unit/: test_check_status.py  test_document_detector.py
